# TDictionary

./: .gitignore  LICENSE  pyproject.toml
src/tdictionary/: __init__.py  __main__.py  bot.py  database.py  env_config.py  search.py
