[project]
name = "tdictionary"
version = "0.1.0"
description = ""
authors = [
    {name = "LostEclair",email = "sillyhwads@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram (>=3.21.0,<4.0.0)",
    "sqlalchemy (>=2.0.42,<3.0.0)"
]

[tool.poetry.group.sqlite]
optional = true
dependencies = { "aiosqlite" = ">=0.20.0,<0.21.0" }
[tool.poetry.group.postgres]
optional = true
dependencies = { "asyncpg" = ">=0.29.0,<0.30.0" }
[tool.poetry.group.dev]
optional = true
dependencies = { "ruff" = ">=0.12.5,<0.12.7" }



[tool.poetry]
packages = [{include = "tdictionary", from = "src"}]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "runtime",
]
line-length = 90
target-version = "py313"
[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = []
fixable = ["ALL"]
unfixable = []
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
